[package]
name = "hdrhistogram-c"
version = "0.1.13"
readme = "README.md"
authors = ["Jeremy Fitzhardinge <jeremy@goop.org>"]
description = "Binding to HdrHistogram_c library"
repository = "https://github.com/jsgf/rust-hdrhistogram"
documentation = "https://jsgf.github.io/rust-hdrhistogram/doc/hdrhistogram/index.html"
keywords = [ "ffi", "binding", "hdrhistogram", "histogram" ]
license = "MIT"
build = "build.rs"
exclude = [ "ccache/**" ]

[dependencies]
libc = "0.2.6"

[build-dependencies]
cmake = "0.1"
