[package]
name = "hdrhistogram-c"
version = "0.1.17"
readme = "README.md"
authors = ["Jeremy Fitzhardinge <jeremy@goop.org>"]
description = "Binding to HdrHistogram_c library"
repository = "https://github.com/jsgf/rust-hdrhistogram"
documentation = "https://docs.rs/hdrhistogram-c"
keywords = [ "ffi", "binding", "hdrhistogram", "histogram" ]
license = "MIT"
build = "build.rs"
exclude = [ "ccache/**" ]

[badges]
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "jsgf/rust-hdrhistogram" }

[dependencies]
libc = "0.2.6"

[build-dependencies]
cmake = "0.1"
