[package]
name = "hdrhistogram-c"
version = "0.2.0"
readme = "README.md"
authors = ["Jeremy Fitzhardinge <jeremy@goop.org>"]
description = "Binding to HdrHistogram_c library"
repository = "https://github.com/jsgf/rust-hdrhistogram"
documentation = "https://docs.rs/hdrhistogram-c"
keywords = [ "ffi", "binding", "hdrhistogram", "histogram" ]
license = "MIT"
build = "build.rs"
exclude = [ "ccache/**" ]
edition = "2018"

[badges]
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "jsgf/rust-hdrhistogram" }

[dependencies]
cxx = "1.0"
paste = "1.0"
thiserror = "1.0"
libc = "0.2"

[build-dependencies]
cxx-build = "1.0"

[features]
default = ["hdr_log"]
hdr_log = []
